Add new travel diary pages, images, and update styles

--- a/photogallery.html
+++ b/photogallery.html
@@ -14,7 +14,7 @@
      <!-- NAVBAR -->
    <nav>
     <div class="left">
-      <a href="/">Alexa Yang</a>
+      <a href="/Personal_Portfolio/index.html">Alexa Yang</a>
     </div>
     <div class="right">
      <a href="https://www.linkedin.com/in/alexa-y-ab7a79268/" target="_blank" rel="noopener noreferrer">
@@ -193,7 +193,7 @@
             </div>
             <div class = "photo">
                 <img src="assets/images/londonsunshinewater.JPG" alt="london pond" />
-                <div class="caption">London, United Kingdom 2024</div>
+                <div class="caption">London, UK 2024</div>
             </div>
             <div class = "photo">
                 <img src="assets/images/taiwanwaterfall.JPG" alt="taiwanese waterfall" />
