--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- NAVBAR -->
    <nav>
     <div class="left">
-      <a href="/Personal Portfolio/index.html">Alexa Yang</a>
+      <a href="/Personal_Portfolio/index.html">Alexa Yang</a>
     </div>
     <div class="right">
      <a href="https://www.linkedin.com/in/alexa-y-ab7a79268/" target="_blank" rel="noopener noreferrer">
@@ -76,7 +76,7 @@
         <div class="text">
           <p>I am eternally grateful for my parents gifting me my Canon DSLR EOS M50. One of my favorite activities is wandering around looking for small moments of beauty and wonder. To view the full extent of my photography addiction, click the link below!</p>
           <div class = "photogallerylink">
-            <a href="/Personal Portfolio/photogallery.html">
+            <a href="/Personal_Portfolio/photogallery.html">
             <span>Photo Gallery</span>
             </a>
           </div>
@@ -111,7 +111,7 @@
        <section id = "Photoshop" class = "photoshop-section">
         <h2>Photoshop</h2>
         <div class="text">
-          <p>Photoshop is a true exercise of imagination. It's a lot of fun turning my friends into mystical beings and putting humans where the laws of physics wouldn’t normally allow. I use an XP Pen Deco 01 Drawing Tablet, gifted to me by my lovely brother Tyler.</p>
+          <p>Photoshop let's me explore the four corners of my imagination. It's a lot of fun turning my friends into mystical beings and putting humans where the laws of physics wouldn’t normally allow. I use an XP Pen Deco 01 Drawing Tablet, gifted to me by my lovely brother Tyler.</p>
         </div>
         <div class = "carousel-viewport">
         <div class="photoshopimagecarousel">
@@ -130,6 +130,19 @@
         </div>
       </div>
        </section>
+       <!-- Section About Me -->
+     <section id = "About Me" class = "about-me">
+      <div class="text">
+       <h2>About Me</h2>
+      <p>Thanks for visiting the site! I currently study Psychology at NYU, but outside of work and school I enjoy dancing, painting questionable representations of my friends, baking banana bread, and getting pretending like I read. I also love to travel! You can find a comprehensive photographic overview of my favorite places in the link below.  </p>
+      <div class = "traveldiarylink">
+        <a href="/Personal_Portfolio/traveldiary.html">
+        <span>Travel Diary</span>
+        </a>
+      </div>
+      
+    </div>
+     </section>
 
        <!-- Section 5 Contact -->
        <section id = "Contact" class = "contact-section">
