--- a/photogallery.html
+++ b/photogallery.html
@@ -132,7 +132,7 @@
                 <div class="caption">London, UK 2024</div>
             </div>
             <div class = "photo">
-                <img src="assets/images/Yang_Alexa_ČeskýKrumlov.webp" alt="cesky krumlov" />
+                <img src="assets/images/ck.webp" alt="cesky krumlov" />
                 <div class="caption">Cesky Krumlov, Czech Republic 2024</div>
             </div>
             <div class = "photo">
