--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
      <section id = "About Me" class = "about-me">
       <div class="text">
        <h2>About Me</h2>
-      <p>Thanks for visiting the site! I currently study Psychology at NYU, but outside of work and school I enjoy dancing, painting questionable representations of my friends, baking banana bread, and getting pretending like I read. I also love to travel! You can find a comprehensive photographic overview of my favorite places in the link below.  </p>
+      <p>Thanks for visiting the site! I currently study Psychology at NYU, but outside of work and school I enjoy dancing, painting questionable representations of my friends, baking banana bread, and pretending like I read. I also love to travel! You can find a comprehensive photographic overview of my favorite places in the link below.  </p>
       <div class = "traveldiarylink">
         <a href="/Personal_Portfolio/traveldiary.html">
         <span>Travel Diary</span>
