Added to travel diary

--- a/index.html
+++ b/index.html
@@ -149,7 +149,10 @@
         <h2>Say Hi!</h2>
         <div class="group">
           <div class="text">
-            Leave a message to say hello, ask a question, or rant about your life problems. 
+            Leave a message to say hello, ask a question, or rant about your life problems.
+          </div>
+          <div class="text">
+            Disclaimer: this part of the site is currently under construction!
           </div>
 
           <form>
