--- a/traveldiary.html
+++ b/traveldiary.html
@@ -101,6 +101,42 @@
                     <a href="portugaldiary.html">Copenhagen, Denmark 2024</a>
                 </div>
             </div>
+            <div class = "postcard">
+                <img src="assets/images/belgiumpostcard.webp" alt="" />
+                <div class="postcard-caption">
+                    <a href="portugaldiary.html">Belgium 2024</a>
+                </div>
+            </div>
+            <div class = "postcard">
+                <img src="assets/images/amsterdampostcard.webp" alt="" />
+                <div class="postcard-caption">
+                    <a href="portugaldiary.html">Amsterdam, Netherlands 2024</a>
+                </div>
+            </div>
+            <div class = "postcard">
+                <img src="assets/images/vilniuspostcard.webp" alt="" />
+                <div class="postcard-caption">
+                    <a href="portugaldiary.html">Vilnius, Lithuania 2024</a>
+                </div>
+            </div>
+            <div class = "postcard">
+                <img src="assets/images/rigapostcard.webp" alt="" />
+                <div class="postcard-caption">
+                    <a href="portugaldiary.html">Riga, Latvia 2024</a>
+                </div>
+            </div>
+            <div class = "postcard">
+                <img src="assets/images/stockholmpostcard.webp" alt="" />
+                <div class="postcard-caption">
+                    <a href="portugaldiary.html">Stockholm, Sweden 2024</a>
+                </div>
+            </div>
+            <div class = "postcard">
+                <img src="assets/images/oslopostcard.webp alt="" />
+                <div class="postcard-caption">
+                    <a href="portugaldiary.html">Oslo, Norway 2024</a>
+                </div>
+            </div>
         </div>
         
         
