Oslo typo fixed

--- a/traveldiary.html
+++ b/traveldiary.html
@@ -132,7 +132,7 @@
                 </div>
             </div>
             <div class = "postcard">
-                <img src="assets/images/oslopostcard.webp alt="" />
+                <img src="assets/images/oslopostcard.webp" alt ="" />
                 <div class="postcard-caption">
                     <a href="portugaldiary.html">Oslo, Norway 2024</a>
                 </div>
